Hack enough stuff in to get tview working

--- a/fw/BUILD
+++ b/fw/BUILD
@@ -39,14 +39,24 @@ mbed_binary(
         "assert.cc",
         "fdcan.cc",
         "fdcan.h",
+        "fdcan_micro_server.h",
         "millisecond_timer.h",
         "power_dist.cc",
         "power_dist_hw.h",
+        "stm32g4_flash.h",
     ],
     deps = [
         ":git_info",
         "@com_github_mjbots_mjlib//mjlib/base:assert",
         "@com_github_mjbots_mjlib//mjlib/base:string_span",
+        "@com_github_mjbots_mjlib//mjlib/micro:async_exclusive",
+        "@com_github_mjbots_mjlib//mjlib/micro:async_stream",
+        "@com_github_mjbots_mjlib//mjlib/micro:command_manager",
+        "@com_github_mjbots_mjlib//mjlib/micro:persistent_config",
+        "@com_github_mjbots_mjlib//mjlib/micro:pool_ptr",
+        "@com_github_mjbots_mjlib//mjlib/micro:telemetry_manager",
+        "@com_github_mjbots_mjlib//mjlib/multiplex:micro_server",
+        "@com_github_mjbots_mjlib//mjlib/multiplex:micro_stream_datagram",
     ],
     copts = COPTS,
 )
