Support OTP UUID and modern CAN addressing
This updates power_dist to match moteus in terms of support UUID based
addressing over CAN.  The UUID can now be set in the OTP.  UUID
addressing is supported, and hardware CAN filters are used to only
receive things that are actually destined for us.

--- a/fw/BUILD
+++ b/fw/BUILD
@@ -49,6 +49,7 @@ mbed_binary(
         "power_dist.cc",
         "power_dist_hw.h",
         "stm32g4_flash.h",
+        "uuid.cc",
         "uuid.h",
     ],
     deps = [
